syntax = "proto3";

package speech;

option java_package = "com.ubtrobot.speech.ipc";
option java_outer_classname = "SpeechProto";

message Speakers {
    repeated Speaker speakers = 1;
}

message Speaker {
    string id = 1;
    string name = 2;
    int32 gender = 3;
}

message SynthesizeOption {
    string sentence = 1;
    string speaker_id = 2;
    int32 speak_speed = 3;
    int32 speak_volume = 4;
}

message Configuration {
    string speaker_id = 1;
    int32 speaking_speed = 2;
    int32 speaking_volume = 3;
    int32 recognize_mode = 4;
    float understand_timeout = 5;
}
message SynthesizingProgress {
    int32 state = 1;
    float progress = 2;
}

message RecognizingProgress {
    int32 state = 1;
    int32 volume = 2;
    RecognizeResult result = 3;
}

message RecognizeResult {
    string text = 1;
}

message RecognizeOption {
    int32 mode = 1;
}

message UnderstandOption {
    string question = 1;
    float time_out = 2;
}

message UnderstandResult {
    string question = 1;
    string answer = 2;
}